fix(RelatedLists) table data overflow

--- a/include/style.css
+++ b/include/style.css
@@ -545,3 +545,6 @@
   position: relative;
   z-index: 2;
 }
+.cbds-data-overflow {
+  overflow: hidden;
+}
